@@ -232,7 +232,7 @@ public class Util {
 	 */
 	public static Integer integerOrNull(int num) {
 		if (num != 0) {
-			return new Integer(num);
+			return Integer.valueOf(num);
 		}
 
 		return null;
@@ -243,7 +243,7 @@ public class Util {
 	 */
 	public static Double doubleOrNull(double num) {
 		if (num != 0) {
-			return new Double(num);
+			return Double.valueOf(num);
 		}
 
 		return null;
@@ -472,7 +472,7 @@ public class Util {
 
 	public static Long extrairNumerosLong(String string) {
 		try {
-			return new Long(extrairNumeros(string));
+			return Long.valueOf(extrairNumeros(string));
 		} catch (Exception e) {
 		}
 		return null;
